feat: se usuario nao enviar mes na requisição, entao sera listados somente as compras do mes atual
